Counter-App fixed visibility, finished styling

--- a/counter-app/src/App.css
+++ b/counter-app/src/App.css
@@ -29,7 +29,7 @@ html, body {
   position: absolute;
   top: 18%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(2.5);
   width: 120px;
   height: 40px;
   opacity: 0.9;
@@ -53,7 +53,7 @@ html, body {
   border-radius: 50%;
 }
 
-.puffs:before {
+.puffs::before {
   width: 46px;
   height: 46px;
   left: 8px;
@@ -68,6 +68,15 @@ html, body {
 }
 h1 {
   z-index: 1;
+  font-size: 50px;
+  margin-top: -45px;
+  margin-left: 18px;
+  animation: floatCloud 4s infinite ease-in-out;
+  font-family: "Playwrite DE Grund", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
 }
 .card {
   text-align: center;
@@ -75,7 +84,7 @@ h1 {
   width: 100%;
   max-width: 800px;
   border: 12px solid #fae4d7;
-  border-radius: 16px;
+  border-radius: 30px;
   padding-bottom: 90px;
   max-height: 500px;
   display: flex;
